<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none">
    
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:scrollbars="vertical"
    android:scrollbarStyle="outsideOverlay">

	<TextView 
	    android:id="@+id/lblBPartner"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/lbl_bpartner"/>
	<Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        />  
    <TextView 
	    android:id="@+id/lblAuditType"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/lbl_audittype"/>
    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView 
	    android:id="@+id/lblChecklist"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/lbl_checklist"/>
    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
	<TextView 
	    android:id="@+id/lblAuditor"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/lbl_auditor"/>
    <Spinner
        android:id="@+id/spinner4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView 
	    android:id="@+id/lblPaperDate"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/lbl_paperdate"/>
    <DatePicker 
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView 
	    android:id="@+id/lblPaperTime"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/lbl_papertime"/>
    <TimePicker 
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button 
        android:id="@+id/btnProcess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="process"
        android:text="@string/lbl_btnprocess"/>
</LinearLayout>
</ScrollView>