<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_31"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:layout_marginLeft="20dip">

            <CheckBox
                android:id="@+id/field74"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/lbl_standard0" />

            <CheckBox
                android:id="@+id/field75"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/lbl_standard1" />

            <CheckBox
                android:id="@+id/field76"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/lbl_standard2" />

            <CheckBox
                android:id="@+id/field77"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/lbl_standard3" />

            <CheckBox
                android:id="@+id/field78"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/lbl_standard4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip">

            <CheckBox
                android:id="@+id/field79"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/lbl_standard5" />

            <EditText
                android:id="@+id/field80"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" >
            </EditText>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_32"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:id="@+id/field81"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/f81_opt0"
                android:text="@string/lbl_result_have"
                android:width="150dp" />

            <RadioButton
                android:id="@+id/f81_opt1"
                android:text="@string/lbl_result_donthave"
                android:width="150dp" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_33"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:id="@+id/field82"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/f82_opt0"
                android:text="@string/lbl_result_have"
                android:width="150dp" />

            <RadioButton
                android:id="@+id/f82_opt1"
                android:text="@string/lbl_result_donthave"
                android:width="150dp" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_34"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            android:layout_marginLeft="20dip">

            <TableRow>

                <CheckBox
                    android:id="@+id/field83"
                    android:layout_width="0dip"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_35" />

                <EditText
                    android:id="@+id/field84"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_gravity="right"
                    android:layout_marginLeft="20dip"
                    android:inputType="number"
                    android:maxLines="1" >
                </EditText>

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="%"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </TableRow>

            <TableRow>

                <CheckBox
                    android:id="@+id/field85"
                    android:layout_width="0dip"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_36" />

                <EditText
                    android:id="@+id/field86"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_gravity="right"
                    android:layout_marginLeft="20dip"
                    android:inputType="number"
                    android:maxLines="1" >
                </EditText>

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="%"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </TableRow>
        </TableLayout>
    </LinearLayout>

</ScrollView>